<resources>
    <string name="app_name">TSM</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_actvity_splash_screen">ActvitySplashScreen</string>
    <string name="title_activity_sample">SampleActivity</string>

    <!--ACTIVITY LOGIN-->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_activity_sample">ActivitySample</string>
    <string name="learn_tsm">Learn about TSM</string>

    <!--ACTIVITY LEARN TSM-->
    <string name="skip">Skip into</string>
    
    <!--Fragment Personal Info-->
    <string name="sales_name">Sales Name</string>
    <string name="sales_id">Sales ID</string>
    <string name="branch">Branch</string>
    <string name="supervisor">Supervisor</string>
    
    <!--Fragment Customer Data-->
    <string name="customer_name">Customer Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="area">Area</string>
    <string name="NPWP">NPWP</string>
    <string name="finish">Finish</string>

    <!--Fragment Call Plan-->
    <string name="customer">Customer</string>
    <string name="location">Location</string>
    <string name="plan_date">Plan Date</string>
    <string name="objective">Objective</string>
    <string name="submit">Submit</string>
    <string name="planet_prompt"></string>
    
    <!--Fragment Call Report-->
    <string name="options">Options</string>
    <string name="lost">Lost</string>
    <string name="deal">Deal</string>
    <!--DEAL-->
    <string name="customer_no">Customer No</string>
    <string name="dp_status">DP Status</string>
    <string name="balance_status">Balance Status</string>
    <string name="product_availability">Product Availability</string>
    <string name="remark">Remark</string>
    <string name="save">Save</string>
    <!--LOST-->
    <string name="reason_of_lost">Reason of lost</string>
    <string name="lost_to">Lost to</string>
    <string name="model_competitor">Model Competitor</string>

    <!--Fragment Quotation-->
    <string name="details">Details</string>
    <string name="products">Products</string>
    <string name="edit">edit</string>
    <string name="QID">QID</string>
    <string name="Customer">Customer</string>
    <string name="total">Total</string>
    <string name="sales_date">Sales Date</string>
    
    <!--Fragment About-->
    <string name="version">version 0.0 &#169; 2015</string>
    <string name="all_right_reserved">all rights reserved</string>

</resources>
