<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tripoin.tsm_mobile.activity.ActivityLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/customer_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txtCustomerName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/contact_person"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txtContactPerson"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/phone_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:inputType="phone"
        android:id="@+id/txtPhoneNumber"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txtAddress"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bt_login"
            android:id="@+id/btNext"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:text="@string/next"/>
    </RelativeLayout>
</LinearLayout>
