<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.tripoin.tsm_mobile.activity.ActivityLogin">

    <!--<com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_tsm_logo"
        android:clickable="true"
        android:layout_marginTop="50dp"
        app:riv_corner_radius="3dp"
        app:riv_border_width="3dip"
        app:riv_oval="false"
        app:riv_border_color="#FFFFFF"
    />-->

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/imgSalesPersonal"
        android:src="@drawable/ic_default_account48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/sales_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/txtSalesName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/sales_id"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/txtSalesId"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/branch"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/txtBranch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/supervisor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/txtSupervisor"/>

</LinearLayout>
