<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tripoin.tsm_mobile.activity.ActivityLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/details"/>

    <it.gmariotti.cardslib.library.view.CardListView
        android:id="@+id/panelDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalSpacing="1dp"
        android:horizontalSpacing="1dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        card:list_card_layout_resourceID="@layout/list_custom_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:text="@string/products"/>

    <it.gmariotti.cardslib.library.view.CardListView
        android:layout_marginTop="5dp"
        android:id="@+id/panelProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalSpacing="1dp"
        android:horizontalSpacing="1dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        card:list_card_layout_resourceID="@layout/list_custom_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/total"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/txtTotal"
            android:textSize="20sp"
            android:text="Rp. 140.000.000,-"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bt_login"
            android:id="@+id/btSubmit"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:text="@string/submit"/>
    </RelativeLayout>
</LinearLayout>
